# cuisineiq_backend

./: main.py  pyproject.toml
alembic/: env.py
app/: config.py  database.py
app/models/: cuisine_details.py  cuisine_images.py  users.py
app/routes/: cusine_crud.py  user_authentication.py
app/schemas/: cuisine_details.py  users.py
app/utils/: cuisine_generation.joblib  dependencies.py  helper_functions.py
