[tool.poetry]
name = "cuisineiq-backend"
version = "0.1.0"
description = ""
authors = ["Aditya Kumar <adityakumar_me20a8_36@dtu.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
openai = "^1.9.0"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.3"
langchain = "^0.1.2"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
joblib = "^1.3.2"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
mysqlclient = "^2.2.1"
pymysql = "^1.1.0"
cryptography = "^42.0.0"
pytz = "^2023.3.post1"
boto3 = "^1.34.26"
python-multipart = "^0.0.6"
pyjwt = "^2.8.0"
pyotp = "^2.9.0"
qrcode = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
